cgram.output
Terminals unused in grammar

   TYPE_NAME


State 118 conflicts: 1 shift/reduce, 1 reduce/reduce
State 190 conflicts: 1 shift/reduce
State 250 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression

   19 unary_operator: '&'
   20               | '*'
   21               | '+'
   22               | '-'
   23               | '~'
   24               | '!'

   25 cast_expression: unary_expression
   26                | '(' type_name ')' cast_expression

   27 multiplicative_expression: cast_expression
   28                          | multiplicative_expression '*' cast_expression
   29                          | multiplicative_expression '/' cast_expression
   30                          | multiplicative_expression '%' cast_expression

   31 additive_expression: multiplicative_expression
   32                    | additive_expression '+' multiplicative_expression
   33                    | additive_expression '-' multiplicative_expression

   34 shift_expression: additive_expression
   35                 | shift_expression LEFT_OP additive_expression
   36                 | shift_expression RIGHT_OP additive_expression

   37 relational_expression: shift_expression
   38                      | relational_expression '<' shift_expression
   39                      | relational_expression '>' shift_expression
   40                      | relational_expression LE_OP shift_expression
   41                      | relational_expression GE_OP shift_expression

   42 equality_expression: relational_expression
   43                    | equality_expression EQ_OP relational_expression
   44                    | equality_expression NE_OP relational_expression

   45 and_expression: equality_expression
   46               | and_expression '&' equality_expression

   47 exclusive_or_expression: and_expression
   48                        | exclusive_or_expression '^' and_expression

   49 inclusive_or_expression: exclusive_or_expression
   50                        | inclusive_or_expression '|' exclusive_or_expression

   51 logical_and_expression: inclusive_or_expression
   52                       | logical_and_expression AND_OP inclusive_or_expression

   53 logical_or_expression: logical_and_expression
   54                      | logical_or_expression OR_OP logical_and_expression

   55 conditional_expression: logical_or_expression
   56                       | logical_or_expression '?' expression ':' conditional_expression

   57 assignment_expression: conditional_expression
   58                      | unary_expression assignment_operator assignment_expression

   59 assignment_operator: '='
   60                    | MUL_ASSIGN
   61                    | DIV_ASSIGN
   62                    | MOD_ASSIGN
   63                    | ADD_ASSIGN
   64                    | SUB_ASSIGN
   65                    | LEFT_ASSIGN
   66                    | RIGHT_ASSIGN
   67                    | AND_ASSIGN
   68                    | XOR_ASSIGN
   69                    | OR_ASSIGN
   70                    | EQ_ASSIGN
   71                    | NE_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers

   79 init_declarator_list: init_declarator
   80                     | init_declarator_list ',' init_declarator

   81 init_declarator: declarator
   82                | declarator '=' initializer

   83 storage_class_specifier: AUTO
   84                        | EXTRN

   85 declarator: pointer direct_declarator
   86           | direct_declarator

   87 direct_declarator: IDENTIFIER
   88                  | '(' declarator ')'
   89                  | direct_declarator '[' constant_expression ']'
   90                  | direct_declarator '[' ']'
   91                  | direct_declarator '(' parameter_type_list ')'
   92                  | direct_declarator '(' identifier_list ')'
   93                  | direct_declarator '(' ')'

   94 pointer: '*'
   95        | '*' pointer

   96 parameter_type_list: parameter_list

   97 parameter_list: parameter_declaration
   98               | parameter_list ',' parameter_declaration

   99 parameter_declaration: declaration_specifiers declarator
  100                      | declaration_specifiers abstract_declarator
  101                      | declaration_specifiers

  102 identifier_list: IDENTIFIER
  103                | identifier_list ',' IDENTIFIER

  104 type_name: abstract_declarator

  105 abstract_declarator: pointer
  106                    | direct_abstract_declarator
  107                    | pointer direct_abstract_declarator

  108 direct_abstract_declarator: '(' abstract_declarator ')'
  109                           | '[' ']'
  110                           | '[' constant_expression ']'
  111                           | direct_abstract_declarator '[' ']'
  112                           | direct_abstract_declarator '[' constant_expression ']'
  113                           | '(' ')'
  114                           | '(' parameter_type_list ')'
  115                           | direct_abstract_declarator '(' ')'
  116                           | direct_abstract_declarator '(' parameter_type_list ')'

  117 initializer: assignment_expression
  118            | '{' initializer_list '}'
  119            | '{' initializer_list ',' '}'

  120 initializer_list: initializer
  121                 | initializer_list ',' initializer

  122 statement: labeled_statement
  123          | compound_statement
  124          | expression_statement
  125          | selection_statement
  126          | iteration_statement
  127          | jump_statement

  128 labeled_statement: IDENTIFIER ':' statement
  129                  | CASE constant_expression ':' statement

  130 compound_statement: '{' '}'
  131                   | '{' statement_list '}'
  132                   | '{' declaration_list '}'
  133                   | '{' declaration_list statement_list '}'

  134 declaration_list: declaration
  135                 | declaration_list declaration

  136 statement_list: statement
  137               | statement_list statement

  138 expression_statement: ';'
  139                     | expression ';'

  140 selection_statement: IF '(' expression ')' statement
  141                    | IF '(' expression ')' statement ELSE statement
  142                    | SWITCH '(' expression ')' statement

  143 iteration_statement: WHILE '(' expression ')' statement

  144 jump_statement: GOTO IDENTIFIER ';'
  145               | RETURN ';'
  146               | RETURN expression ';'

  147 translation_unit: external_declaration
  148                 | translation_unit external_declaration

  149 external_declaration: function_definition
  150                     | declaration

  151 function_definition: declaration_specifiers declarator declaration_list compound_statement
  152                    | declaration_specifiers declarator compound_statement
  153                    | declarator declaration_list compound_statement
  154                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'%' (37) 30
'&' (38) 19 46
'(' (40) 4 7 8 26 88 91 92 93 108 113 114 115 116 140 141 142 143
')' (41) 4 7 8 26 88 91 92 93 108 113 114 115 116 140 141 142 143
'*' (42) 20 28 94 95
'+' (43) 21 32
',' (44) 14 73 80 98 103 119 121
'-' (45) 22 33
'.' (46) 9
'/' (47) 29
':' (58) 56 128 129
';' (59) 75 76 138 139 144 145 146
'<' (60) 38
'=' (61) 59 82
'>' (62) 39
'?' (63) 56
'[' (91) 6 89 90 109 110 111 112
']' (93) 6 89 90 109 110 111 112
'^' (94) 48
'{' (123) 118 119 130 131 132 133
'|' (124) 50
'}' (125) 118 119 130 131 132 133
'~' (126) 23
error (256)
IDENTIFIER (258) 1 9 10 87 102 103 128 144
CONSTANT (259) 2
STRING_LITERAL (260) 3
PTR_OP (261) 10
INC_OP (262) 11 16
DEC_OP (263) 12 17
LEFT_OP (264) 35
RIGHT_OP (265) 36
LE_OP (266) 40
GE_OP (267) 41
EQ_OP (268) 43
NE_OP (269) 44
AND_OP (270) 52
OR_OP (271) 54
MUL_ASSIGN (272) 60
DIV_ASSIGN (273) 61
MOD_ASSIGN (274) 62
ADD_ASSIGN (275) 63
SUB_ASSIGN (276) 64
LEFT_ASSIGN (277) 65
RIGHT_ASSIGN (278) 66
AND_ASSIGN (279) 67
EQ_ASSIGN (280) 70
NE_ASSIGN (281) 71
XOR_ASSIGN (282) 68
OR_ASSIGN (283) 69
TYPE_NAME (284)
AUTO (285) 83
EXTRN (286) 84
CASE (287) 129
IF (288) 140 141
ELSE (289) 141
SWITCH (290) 142
WHILE (291) 143
GOTO (292) 144
RETURN (293) 145 146


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
primary_expression (64)
    on left: 1 2 3 4, on right: 5
postfix_expression (65)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expression_list (66)
    on left: 13 14, on right: 8 14
unary_expression (67)
    on left: 15 16 17 18, on right: 16 17 25 58
unary_operator (68)
    on left: 19 20 21 22 23 24, on right: 18
cast_expression (69)
    on left: 25 26, on right: 18 26 27 28 29 30
multiplicative_expression (70)
    on left: 27 28 29 30, on right: 28 29 30 31 32 33
additive_expression (71)
    on left: 31 32 33, on right: 32 33 34 35 36
shift_expression (72)
    on left: 34 35 36, on right: 35 36 37 38 39 40 41
relational_expression (73)
    on left: 37 38 39 40 41, on right: 38 39 40 41 42 43 44
equality_expression (74)
    on left: 42 43 44, on right: 43 44 45 46
and_expression (75)
    on left: 45 46, on right: 46 47 48
exclusive_or_expression (76)
    on left: 47 48, on right: 48 49 50
inclusive_or_expression (77)
    on left: 49 50, on right: 50 51 52
logical_and_expression (78)
    on left: 51 52, on right: 52 53 54
logical_or_expression (79)
    on left: 53 54, on right: 54 55 56
conditional_expression (80)
    on left: 55 56, on right: 56 57 74
assignment_expression (81)
    on left: 57 58, on right: 13 14 58 72 73 117
assignment_operator (82)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71, on right: 58
expression (83)
    on left: 72 73, on right: 4 6 56 73 139 140 141 142 143 146
constant_expression (84)
    on left: 74, on right: 89 110 112 129
declaration (85)
    on left: 75 76, on right: 134 135 150
declaration_specifiers (86)
    on left: 77 78, on right: 75 76 78 99 100 101 151 152
init_declarator_list (87)
    on left: 79 80, on right: 76 80
init_declarator (88)
    on left: 81 82, on right: 79 80
storage_class_specifier (89)
    on left: 83 84, on right: 77 78
declarator (90)
    on left: 85 86, on right: 81 82 88 99 151 152 153 154
direct_declarator (91)
    on left: 87 88 89 90 91 92 93, on right: 85 86 89 90 91 92 93
pointer (92)
    on left: 94 95, on right: 85 95 105 107
parameter_type_list (93)
    on left: 96, on right: 91 114 116
parameter_list (94)
    on left: 97 98, on right: 96 98
parameter_declaration (95)
    on left: 99 100 101, on right: 97 98
identifier_list (96)
    on left: 102 103, on right: 92 103
type_name (97)
    on left: 104, on right: 26
abstract_declarator (98)
    on left: 105 106 107, on right: 100 104 108
direct_abstract_declarator (99)
    on left: 108 109 110 111 112 113 114 115 116, on right: 106 107
    111 112 115 116
initializer (100)
    on left: 117 118 119, on right: 82 120 121
initializer_list (101)
    on left: 120 121, on right: 118 119 121
statement (102)
    on left: 122 123 124 125 126 127, on right: 128 129 136 137 140
    141 142 143
labeled_statement (103)
    on left: 128 129, on right: 122
compound_statement (104)
    on left: 130 131 132 133, on right: 123 151 152 153 154
declaration_list (105)
    on left: 134 135, on right: 132 133 135 151 153
statement_list (106)
    on left: 136 137, on right: 131 133 137
expression_statement (107)
    on left: 138 139, on right: 124
selection_statement (108)
    on left: 140 141 142, on right: 125
iteration_statement (109)
    on left: 143, on right: 126
jump_statement (110)
    on left: 144 145 146, on right: 127
translation_unit (111)
    on left: 147 148, on right: 0 148
external_declaration (112)
    on left: 149 150, on right: 147 148
function_definition (113)
    on left: 151 152 153 154, on right: 149


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    AUTO        shift, and go to state 2
    EXTRN       shift, and go to state 3
    '('         shift, and go to state 4
    '*'         shift, and go to state 5

    declaration              go to state 6
    declaration_specifiers   go to state 7
    storage_class_specifier  go to state 8
    declarator               go to state 9
    direct_declarator        go to state 10
    pointer                  go to state 11
    translation_unit         go to state 12
    external_declaration     go to state 13
    function_definition      go to state 14


State 1

   87 direct_declarator: IDENTIFIER .

    $default  reduce using rule 87 (direct_declarator)


State 2

   83 storage_class_specifier: AUTO .

    $default  reduce using rule 83 (storage_class_specifier)


State 3

   84 storage_class_specifier: EXTRN .

    $default  reduce using rule 84 (storage_class_specifier)


State 4

   88 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    '*'         shift, and go to state 5

    declarator         go to state 15
    direct_declarator  go to state 10
    pointer            go to state 11


State 5

   94 pointer: '*' .
   95        | '*' . pointer

    '*'  shift, and go to state 5

    $default  reduce using rule 94 (pointer)

    pointer  go to state 16


State 6

  150 external_declaration: declaration .

    $default  reduce using rule 150 (external_declaration)


State 7

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  151 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  152                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    '*'         shift, and go to state 5
    ';'         shift, and go to state 17

    init_declarator_list  go to state 18
    init_declarator       go to state 19
    declarator            go to state 20
    direct_declarator     go to state 10
    pointer               go to state 11


State 8

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    AUTO   shift, and go to state 2
    EXTRN  shift, and go to state 3

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers   go to state 21
    storage_class_specifier  go to state 8


State 9

  153 function_definition: declarator . declaration_list compound_statement
  154                    | declarator . compound_statement

    AUTO   shift, and go to state 2
    EXTRN  shift, and go to state 3
    '{'    shift, and go to state 22

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 8
    compound_statement       go to state 25
    declaration_list         go to state 26


State 10

   86 declarator: direct_declarator .
   89 direct_declarator: direct_declarator . '[' constant_expression ']'
   90                  | direct_declarator . '[' ']'
   91                  | direct_declarator . '(' parameter_type_list ')'
   92                  | direct_declarator . '(' identifier_list ')'
   93                  | direct_declarator . '(' ')'

    '('  shift, and go to state 27
    '['  shift, and go to state 28

    $default  reduce using rule 86 (declarator)


State 11

   85 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4

    direct_declarator  go to state 29


State 12

    0 $accept: translation_unit . $end
  148 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 30
    IDENTIFIER  shift, and go to state 1
    AUTO        shift, and go to state 2
    EXTRN       shift, and go to state 3
    '('         shift, and go to state 4
    '*'         shift, and go to state 5

    declaration              go to state 6
    declaration_specifiers   go to state 7
    storage_class_specifier  go to state 8
    declarator               go to state 9
    direct_declarator        go to state 10
    pointer                  go to state 11
    external_declaration     go to state 31
    function_definition      go to state 14


State 13

  147 translation_unit: external_declaration .

    $default  reduce using rule 147 (translation_unit)


State 14

  149 external_declaration: function_definition .

    $default  reduce using rule 149 (external_declaration)


State 15

   88 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 32


State 16

   95 pointer: '*' pointer .

    $default  reduce using rule 95 (pointer)


State 17

   75 declaration: declaration_specifiers ';' .

    $default  reduce using rule 75 (declaration)


State 18

   76 declaration: declaration_specifiers init_declarator_list . ';'
   80 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 33
    ';'  shift, and go to state 34


State 19

   79 init_declarator_list: init_declarator .

    $default  reduce using rule 79 (init_declarator_list)


State 20

   81 init_declarator: declarator .
   82                | declarator . '=' initializer
  151 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  152                    | declaration_specifiers declarator . compound_statement

    AUTO   shift, and go to state 2
    EXTRN  shift, and go to state 3
    '='    shift, and go to state 35
    '{'    shift, and go to state 22

    $default  reduce using rule 81 (init_declarator)

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 8
    compound_statement       go to state 36
    declaration_list         go to state 37


State 21

   78 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 78 (declaration_specifiers)


State 22

  130 compound_statement: '{' . '}'
  131                   | '{' . statement_list '}'
  132                   | '{' . declaration_list '}'
  133                   | '{' . declaration_list statement_list '}'

    IDENTIFIER      shift, and go to state 38
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    AUTO            shift, and go to state 2
    EXTRN           shift, and go to state 3
    CASE            shift, and go to state 43
    IF              shift, and go to state 44
    SWITCH          shift, and go to state 45
    WHILE           shift, and go to state 46
    GOTO            shift, and go to state 47
    RETURN          shift, and go to state 48
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55
    ';'             shift, and go to state 56
    '{'             shift, and go to state 22
    '}'             shift, and go to state 57

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    expression                 go to state 75
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 8
    statement                  go to state 76
    labeled_statement          go to state 77
    compound_statement         go to state 78
    declaration_list           go to state 79
    statement_list             go to state 80
    expression_statement       go to state 81
    selection_statement        go to state 82
    iteration_statement        go to state 83
    jump_statement             go to state 84


State 23

  134 declaration_list: declaration .

    $default  reduce using rule 134 (declaration_list)


State 24

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    '*'         shift, and go to state 5
    ';'         shift, and go to state 17

    init_declarator_list  go to state 18
    init_declarator       go to state 19
    declarator            go to state 85
    direct_declarator     go to state 10
    pointer               go to state 11


State 25

  154 function_definition: declarator compound_statement .

    $default  reduce using rule 154 (function_definition)


State 26

  135 declaration_list: declaration_list . declaration
  153 function_definition: declarator declaration_list . compound_statement

    AUTO   shift, and go to state 2
    EXTRN  shift, and go to state 3
    '{'    shift, and go to state 22

    declaration              go to state 86
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 8
    compound_statement       go to state 87


State 27

   91 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   92                  | direct_declarator '(' . identifier_list ')'
   93                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 88
    AUTO        shift, and go to state 2
    EXTRN       shift, and go to state 3
    ')'         shift, and go to state 89

    declaration_specifiers   go to state 90
    storage_class_specifier  go to state 8
    parameter_type_list      go to state 91
    parameter_list           go to state 92
    parameter_declaration    go to state 93
    identifier_list          go to state 94


State 28

   89 direct_declarator: direct_declarator '[' . constant_expression ']'
   90                  | direct_declarator '[' . ']'

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 49
    ']'             shift, and go to state 96
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 97
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 98
    constant_expression        go to state 99


State 29

   85 declarator: pointer direct_declarator .
   89 direct_declarator: direct_declarator . '[' constant_expression ']'
   90                  | direct_declarator . '[' ']'
   91                  | direct_declarator . '(' parameter_type_list ')'
   92                  | direct_declarator . '(' identifier_list ')'
   93                  | direct_declarator . '(' ')'

    '('  shift, and go to state 27
    '['  shift, and go to state 28

    $default  reduce using rule 85 (declarator)


State 30

    0 $accept: translation_unit $end .

    $default  accept


State 31

  148 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 148 (translation_unit)


State 32

   88 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 88 (direct_declarator)


State 33

   80 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    '*'         shift, and go to state 5

    init_declarator    go to state 100
    declarator         go to state 85
    direct_declarator  go to state 10
    pointer            go to state 11


State 34

   76 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 76 (declaration)


State 35

   82 init_declarator: declarator '=' . initializer

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55
    '{'             shift, and go to state 101

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 102
    initializer                go to state 103


State 36

  152 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 152 (function_definition)


State 37

  135 declaration_list: declaration_list . declaration
  151 function_definition: declaration_specifiers declarator declaration_list . compound_statement

    AUTO   shift, and go to state 2
    EXTRN  shift, and go to state 3
    '{'    shift, and go to state 22

    declaration              go to state 86
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 8
    compound_statement       go to state 104


State 38

    1 primary_expression: IDENTIFIER .
  128 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 105

    $default  reduce using rule 1 (primary_expression)


State 39

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


State 40

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


State 41

   16 unary_expression: INC_OP . unary_expression

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 106
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression  go to state 58
    postfix_expression  go to state 59
    unary_expression    go to state 107
    unary_operator      go to state 61


State 42

   17 unary_expression: DEC_OP . unary_expression

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 106
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression  go to state 58
    postfix_expression  go to state 59
    unary_expression    go to state 108
    unary_operator      go to state 61


State 43

  129 labeled_statement: CASE . constant_expression ':' statement

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 97
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 98
    constant_expression        go to state 109


State 44

  140 selection_statement: IF . '(' expression ')' statement
  141                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 110


State 45

  142 selection_statement: SWITCH . '(' expression ')' statement

    '('  shift, and go to state 111


State 46

  143 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 112


State 47

  144 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 113


State 48

  145 jump_statement: RETURN . ';'
  146               | RETURN . expression ';'

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55
    ';'             shift, and go to state 114

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    expression                 go to state 115


State 49

    4 primary_expression: '(' . expression ')'
   26 cast_expression: '(' . type_name ')' cast_expression

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 116
    '['             shift, and go to state 117
    '&'             shift, and go to state 50
    '*'             shift, and go to state 118
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression          go to state 58
    postfix_expression          go to state 59
    unary_expression            go to state 60
    unary_operator              go to state 61
    cast_expression             go to state 62
    multiplicative_expression   go to state 63
    additive_expression         go to state 64
    shift_expression            go to state 65
    relational_expression       go to state 66
    equality_expression         go to state 67
    and_expression              go to state 68
    exclusive_or_expression     go to state 69
    inclusive_or_expression     go to state 70
    logical_and_expression      go to state 71
    logical_or_expression       go to state 72
    conditional_expression      go to state 73
    assignment_expression       go to state 74
    expression                  go to state 119
    pointer                     go to state 120
    type_name                   go to state 121
    abstract_declarator         go to state 122
    direct_abstract_declarator  go to state 123


State 50

   19 unary_operator: '&' .

    $default  reduce using rule 19 (unary_operator)


State 51

   20 unary_operator: '*' .

    $default  reduce using rule 20 (unary_operator)


State 52

   21 unary_operator: '+' .

    $default  reduce using rule 21 (unary_operator)


State 53

   22 unary_operator: '-' .

    $default  reduce using rule 22 (unary_operator)


State 54

   23 unary_operator: '~' .

    $default  reduce using rule 23 (unary_operator)


State 55

   24 unary_operator: '!' .

    $default  reduce using rule 24 (unary_operator)


State 56

  138 expression_statement: ';' .

    $default  reduce using rule 138 (expression_statement)


State 57

  130 compound_statement: '{' '}' .

    $default  reduce using rule 130 (compound_statement)


State 58

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


State 59

    6 postfix_expression: postfix_expression . '[' expression ']'
    7                   | postfix_expression . '(' ')'
    8                   | postfix_expression . '(' argument_expression_list ')'
    9                   | postfix_expression . '.' IDENTIFIER
   10                   | postfix_expression . PTR_OP IDENTIFIER
   11                   | postfix_expression . INC_OP
   12                   | postfix_expression . DEC_OP
   15 unary_expression: postfix_expression .

    PTR_OP  shift, and go to state 124
    INC_OP  shift, and go to state 125
    DEC_OP  shift, and go to state 126
    '('     shift, and go to state 127
    '['     shift, and go to state 128
    '.'     shift, and go to state 129

    $default  reduce using rule 15 (unary_expression)


State 60

   25 cast_expression: unary_expression .
   58 assignment_expression: unary_expression . assignment_operator assignment_expression

    MUL_ASSIGN    shift, and go to state 130
    DIV_ASSIGN    shift, and go to state 131
    MOD_ASSIGN    shift, and go to state 132
    ADD_ASSIGN    shift, and go to state 133
    SUB_ASSIGN    shift, and go to state 134
    LEFT_ASSIGN   shift, and go to state 135
    RIGHT_ASSIGN  shift, and go to state 136
    AND_ASSIGN    shift, and go to state 137
    EQ_ASSIGN     shift, and go to state 138
    NE_ASSIGN     shift, and go to state 139
    XOR_ASSIGN    shift, and go to state 140
    OR_ASSIGN     shift, and go to state 141
    '='           shift, and go to state 142

    $default  reduce using rule 25 (cast_expression)

    assignment_operator  go to state 143


State 61

   18 unary_expression: unary_operator . cast_expression

    IDENTIFIER      shift, and go to state 95
    CONSTANT        shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    INC_OP          shift, and go to state 41
    DEC_OP          shift, and go to state 42
    '('             shift, and go to state 49
    '&'             shift, and go to state 50
    '*'             shift, and go to state 51
    '+'             shift, and go to state 52
    '-'             shift, and go to state 53
    '~'             shift, and go to state 54
    '!'             shift, and go to state 55

    primary_expression  go to state 58
    postfix_expression  go to state 59
    unary_expression    go to state 97
    unary_operator      go to state 61
    cast_expression     go to state 144


State 62

   27 multiplicative_expression: cast_expression .

    $default  reduce using rule 27 (multiplicative_expression)


State 63

   28 multiplicative_expression: multiplicative_expression . '*' cast_expression
   29                          | multiplicative_expression . '/' cast_expression
   30                          | multiplicative_expression . '%' cast_expression
   31 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 145
    '/'  shift, and go to state 146
    '%'  shift, and go to state 147

    $default  reduce using rule 31 (additive_expression)


State 64

   32 additive_expression: additive_expression . '+' multiplicative_expression
   33                    | additive_expression . '-' multiplicative_expression
   34 shift_expression: additive_expression .

    '+'  shift, and go to state 148
    '-'  shift, and go to state 149
